data/Java/11-access-non-static-variable/4/[M]Error.txt
https://stackoverflow.com/questions/14272376/error-non-static-variable-cannot-be-referenced-from-a-static-context
Program.java:13: error: non-static variable idNo cannot be referenced from a static context
        System.out.println("secondclass citizen" + idNo);
                                                   ^